Adding files and event date

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script th:src="@{/assets/js/moment.js}"></script>
 </head>
 <body style="background-color: #14191B;">
 <div class="ui container">
